fix nav collapse bug:angular-bootstrap

--- a/app/public/css/styles.less
+++ b/app/public/css/styles.less
@@ -17,30 +17,12 @@
 }
 
 
-//css for nav.html
-#r-nav-id-name {
-	margin-left:20px;
-	margin-top:16px;
-	margin-right:10px;
-	color:#FEFEFE;
-}
-
-.r-nav-footer {
-	font-size:13px;
-	color:#777;
-
-	padding: 30px 0;
-    border-top: 1px solid #e5e5e5;
-    margin-top: 70px;
-
-    text-align:center;
-}
 
 //import files
 @import "loginpage.less";
 @import "registerpage.less";
 @import "registerpage.less";
 @import "mainpage.less";
-
+@import "nav.less";
 
 
